tests/ui/basic/assert_eq_fail.rs
use metamatch::eval;

fn main() {
    eval! {
        assert_eq!(1, 2)
    };
}
